--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-	<head><title>roamn</title>
+	<head>
+		<title>roamn</title>
+		<link rel="icon" href="favicon.png"/>
 	<style>
 	.container {
 		width: 1024px;
@@ -57,6 +59,7 @@
 
 			<div class="container_small"><div style="background-color: cornflowerblue" class="bar">Contact me</div><br><a style="text-decoration:none; color: #0000ee;" href="mailto:">Click here</a></div></div>
 			<div class="container_small"><div style="background-color: green; font-size: 12px;" class="bar">My programmer friend has also a website</div><br><a style="text-decoration:none; color: #0000ee;" href="https://cv.martin-vogt.ch">Click here</a></div></div>
+			<a style="text-decoration:none; color: #0000ee;" href="res/blog.html">Blog</a>
 
 		</center></body>
 </html>
