--- a/res/blog.html
+++ b/res/blog.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>roamn</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"><meta charset="utf-8">
-		<link rel="icon" href="favicon.png"/>
+		<link rel="icon" type="image/x-icon" href="favicon.png">
 	<style>
 	.container {
 		width: 1024px;
