--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 			<div class="container_small"><div style="background-color: cornflowerblue" class="bar">Contact me</div><br><a style="text-decoration:none; color: #0000ee;" href="mailto:">Click here</a></div></div>
 			<div class="container_small"><div style="background-color: green; font-size: 12px;" class="bar">My programmer friend has also a website</div><br><a style="text-decoration:none; color: #0000ee;" href="https://cv.martin-vogt.ch">Click here</a></div></div>
-			<br><br>-- <a style="text-decoration:none; color: #0000ee;" href="s/blog.html">Blog</a> --
+			<br><br>-- <a style="text-decoration:none; color: #0000ee;" href="p/blog.html">Blog</a> --
 
 		</center></body>
 </html>
