--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 			<div style="float: center;" class="container_big"><div style="background-color: red" class="bar_big">My YouTube channel</div><br><a style="text-decoration:none; color: #0000ee;" href="https://www.youtube.com/channel/UCrWA77RZxIcsjDSqI2FvaAQ">https://www.youtube.com/channel/UCrWA77RZxIcsjDSqI2FvaAQ</a></div>
 			
 
-			<div class="container_small"><div style="background-color: cornflowerblue" class="bar">Contact me</div><br><a style="text-decoration:none; color: #0000ee;" href="mailto:">Click here</a></div></div>
-			<div class="container_small"><div style="background-color: green; font-size: 12px;" class="bar">My programmer friend has also a website</div><br><a style="text-decoration:none; color: #0000ee;" href="https://cv.martin-vogt.ch">Click here</a></div></div>
+			<div style="float: center;" class="container_small"><div style="background-color: cornflowerblue" class="bar">Contact me</div><br><a style="text-decoration:none; color: #0000ee;" href="mailto:">Click here</a></div></div>
+			<div style="float: center;" class="container_small"><div style="background-color: green; font-size: 12px;" class="bar">My programmer friend has also a website</div><br><a style="text-decoration:none; color: #0000ee;" href="https://cv.martin-vogt.ch">Click here</a></div></div>
 			<br><br>-- <a style="text-decoration:none; color: #0000ee;" href="p/blog.html">Blog</a> --
 
 		</center></body>
