--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>roamn</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		  <link rel="shortcut icon" href="favicon.png"/>
+		  <link rel="shortcut icon" href="favicon.png?"/>
 	<style>
 	.container {
 		width: 1024px;
