--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <html>
 	<head>
 		<title>roamn</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+
 		  <link rel="shortcut icon" href="favicon.png?"/>
 	<style>
+				@media only screen and (max-width: 900px) {
+    /* Style adjustments for non responsive websites */
+    body{width:940px;}
+}
 	.container {
 		width: 1024px;
 		height: 48px;
