--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 			<div style="float: center;" class="container_small"><div style="background-color: cornflowerblue" class="bar">Contact me</div><br><a style="text-decoration:none; color: #0000ee;" href="mailto:">Click here</a></div></div>
 				<div style="float: right; height: 256px" class="container_small"><div style="background-color: ligthgreen" class="bar">The FaviContest</div><br>Send me your cool favicon at the end of the month, a winner will be selected and used for the site. Supported sizes: 16x16, 32x32, 48x48, 64x64, 92x92</div></div>
 			<div style="float: center;" class="container_small"><div style="background-color: green; font-size: 12px;" class="bar">My programmer friend has also a website</div><br><a style="text-decoration:none; color: #0000ee;" href="https://cv.martin-vogt.ch">Click here</a></div></div>
-			<br><br><center>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-- <a style="text-decoration:none; color: #0000ee;" href="p/blog.html">Blog</a> --</center>
+			<br><br><center>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				-- <a style="text-decoration:none; color: #0000ee;" href="p/blog.html">Blog</a> --</center>
 
 		</center></body>
 </html>
