--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 		width: 511px;
 		height: 64px;
 	}
+	@font-face {
+  		font-family: "Kimberley";
+  		src: url(Typo_Round_Bold_Demo.otf) format("opentype");
+	}
 	</style>
 	</head>
 		<body><center>
