--- a/p/blog.html
+++ b/p/blog.html
@@ -58,6 +58,10 @@
                                 <p><u>Thurday, October 27. 2022</u><br> I am very happy that I made this website. It is my first one!<br>Created th e website, added the favicon, smiley, etc. Have fun! ☺</p>
                         
                         </div>
+			<div style="float: center; font: arial;" class="container_big">
+                                <p><u>Friday, October 28. 2022</u><br> Created the FaviContest page (/p/fc.html). The smiley was removed. That's all. ☺</p>
+                        
+                        </div>
 
 		</center></body>
 </html>
