--- a/p/blog.html
+++ b/p/blog.html
@@ -59,7 +59,7 @@
                         
                         </div>
 			<div style="float: center; font: arial;" class="container_big">
-                                <p><u>Friday, October 28. 2022</u><br> Created the FaviContest page (/p/fc.html). The smiley was removed. That's all. ☺</p>
+                                <p><u>Friday, October 28. 2022</u><br> Created the FaviContest page (<font face="arial">/p/fc.html</font>). The smiley was removed. That's all. ☺</p>
                         
                         </div>
 
