--- a/links.html
+++ b/links.html
@@ -57,6 +57,7 @@
         <div><b><u>in /p/</u></b><br>
          <a style="text-decoration: none; color: #0000ee;" href="https://roamn2.github.io/p/blog/">https://roamn2.github.io/p/blog/&emsp;27.10.2022</a><br>
          <a style="text-decoration: none; color: #0000ee;" href="https://roamn2.github.io/p/fc/">https://roamn2.github.io/p/fc/&emsp;28.10.2022</a><br>
+         <a style="text-decoration: none; color: #0000ee;" href="https://roamn2.github.io/p/links/">https://roamn2.github.io/p/links/&emsp;28.10.2022</a><br>
           <br><font face="arial">Please not that "https://roamn2.github.io/p/" does not work.
         
         </div>
