--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<div style="float: center;" class="container_big"><div style="background-color: green; font-size: 12px;" class="bar_big">My programmer friend has also a website</div><br><a style="text-decoration:none; color: #0000ee;" href="https://cv.martin-vogt.ch">Click here</a></div></div>
 			<br><br><center>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				-- <a style="text-decoration:none; color: #0000ee;" href="https://roamn2.github.io/p/blog">Blog</a> --</center>
-				<center>-- <a style="text-decoration:none; color: #0000ee;" href="https://roamn2.github.io/p/links">Links</a> --</center>
+				<center>-- <a style="text-decoration:none; color: #0000ee;" href="https://roamn2.github.io/links">Links</a> --</center>
 
 		</center></body>
 </html>
