--- a/links.html
+++ b/links.html
@@ -55,12 +55,12 @@
 			<div style="background-color: pink" class="bar_big">Links</div><br>
 			<div style="float: center; font: arial;" class="container_big">
         <div><b><u>in /p/</u></b><br>
-         <a style="text-decoration: none; color: #0000ee;" href="https://roamn2.github.io/p/blog/">https://roamn2.github.io/p/blog/&emsp;27.10.2022</a><br>
-         <a style="text-decoration: none; color: #0000ee;" href="https://roamn2.github.io/p/fc/">https://roamn2.github.io/p/fc/&emsp;28.10.2022</a><br>
+         <a style="text-decoration: none; color: #0000ee;" href="https://roamn2.github.io/p/blog/">https://roamn2.github.io/p/blog</a>&emsp;27.10.2022<br>
+         <a style="text-decoration: none; color: #0000ee;" href="https://roamn2.github.io/p/fc/">https://roamn2.github.io/p/fc</a>&emsp;28.10.2022<br>
           <br><font face="arial">Please not that "https://roamn2.github.io/p/" does not work.
           </div>
           <div><b><u>in "root"</u></b><br>
-                        <a style="text-decoration: none; color: #0000ee;" href="https://roamn2.github.io/p/links/">https://roamn2.github.io/p/links/&emsp;28.10.2022</a><br>
+                        <a style="text-decoration: none; color: #0000ee;" href="https://roamn2.github.io/links/">https://roamn2.github.io/p/links/</a>&emsp;28.10.2022<br>
                         </div>
 
 		</center></body>
