--- a/links.html
+++ b/links.html
@@ -60,7 +60,7 @@
 		<br><font face="arial" size="4">Please not that "https://roamn2.github.io/p/" does not work.</font>
           </div>
           <div><b><u>in "root"</u></b><br>
-                        <a style="text-decoration: none; color: #0000ee;" href="https://roamn2.github.io/links">https://roamn2.github.io/p/links/</a>&emsp;28.10.2022<br>
+                        <a style="text-decoration: none; color: #0000ee;" href="https://roamn2.github.io/links">https://roamn2.github.io/links</a>&emsp;28.10.2022<br>
                         </div>
 
 		</center></body>
