--- a/links.html
+++ b/links.html
@@ -58,7 +58,7 @@
          <a style="text-decoration: none; color: #0000ee;" href="https://roamn2.github.io/p/blog">https://roamn2.github.io/p/blog</a>&emsp;27.10.2022<br>
          <a style="text-decoration: none; color: #0000ee;" href="https://roamn2.github.io/p/fc">https://roamn2.github.io/p/fc</a>&emsp;28.10.2022<br>
 		<br><font face="arial" size="4">Please not that "https://roamn2.github.io/p/" does not work.</font>
-          </div>
+          </div><br>
           <div><b><u>in "root"</u></b><br>
                         <a style="text-decoration: none; color: #0000ee;" href="https://roamn2.github.io/links">https://roamn2.github.io/links</a>&emsp;28.10.2022<br>
                         </div>
