--- a/links.html
+++ b/links.html
@@ -57,7 +57,7 @@
         <div><b><u>in /p/</u></b><br>
          <a style="text-decoration: none; color: #0000ee;" href="https://roamn2.github.io/p/blog">https://roamn2.github.io/p/blog</a>&emsp;27.10.2022<br>
          <a style="text-decoration: none; color: #0000ee;" href="https://roamn2.github.io/p/fc">https://roamn2.github.io/p/fc</a>&emsp;28.10.2022<br>
-		<br><font face="arial" size="4">Please not that "https://roamn2.github.io/p/" does not work.</font>
+		<br><font face="arial" size="4">Please note that "https://roamn2.github.io/p/" does not work. It is not a valid link. Thank you.</font>
           </div><br>
           <div><b><u>in "root"</u></b><br>
                         <a style="text-decoration: none; color: #0000ee;" href="https://roamn2.github.io/links">https://roamn2.github.io/links</a>&emsp;28.10.2022<br>
