--- a/links.html
+++ b/links.html
@@ -60,6 +60,7 @@
 				
         <div><b><u>in /p/</u></b><br>
          <a style="text-decoration: none; color: #0000ee;" href="https://roamn2.github.io/p/blog">https://roamn2.github.io/p/blog</a>&emsp;27.10.2022<br>
+         <a style="text-decoration: none; color: #0000ee;" href="https://roamn2.github.io/p/fc">https://roamn2.github.io/p/fc</a>&emsp;28.10.2022<br>
           </div><br>
 
 
