--- a/p/blog.html
+++ b/p/blog.html
@@ -59,7 +59,7 @@
                         
                         </div><br>
 			<div style="float: center; font: arial;" class="container_big">
-                                <p><u>Friday, October 28. 2022</u><br> Created the FaviContest page (<font face="arial">/p/fc</font>). The smiley was removed. That's all. ☺</p>
+                                <p><u>Friday, October 28. 2022</u><br> Created the FaviContest and the "links" page (<font face="arial">/p/fc</font> &amp; <font face="arial">/links</font>). The smiley was removed. That's all. ☺<</p>
                         
                         </div>
 
