--- a/e/404.html
+++ b/e/404.html
@@ -10,9 +10,9 @@
       }
     </style>
   </head>
-    <body>
+    <body><center>
       <h1>ERROR</h1>
-      404<br><br>The reqested item was not found.<br>
+      <font face="consolas" size="24px">404</font><br><br>The reqested item was not found.<br>
       <br><a style="text-decoration: none; color: #0000ee;" href="https://roamn2.github.io">Go home</a>
-    </body>
+      </center></body>
 </html>
