--- a/index.html
+++ b/index.html
@@ -46,9 +46,17 @@
 		font-family: arial;
 		text-align: center;
 	}
-	.w {
-		width: 511px;
+	.container_button {
+		width: 256px;
 		height: 64px;
+		background-color: grey;
+		font-family: cascadia code;
+		font-size: 24px;
+		color: white;
+		text-align: center;
+	}
+	.container_button:hover {
+		background-color: black;
 	}
 	@font-face {
   		font-family: "TRBD";
