--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 
 <html>
-	<head></head>
-	<body>Site under construction.</body>
+	<head>
+		<title>Welcome!</title>
+	</head>
+	<body>
+		<p>>You will be redirected in 5 seconds. If you it doen't happen, redirect manually by clicking <a href="https://zelnicek.ch">here</a>!</p>
+		<script>
+			setTimeout(window.location.replace='https://zelnicek.ch', 5000);
+		</script>
+	</body>
 </html>
