--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 		<title>Welcome!</title>
 	</head>
 	<body>
-		<p>>You will be redirected in 5 seconds. If you it doen't happen, redirect manually by clicking <a href="https://zelnicek.ch">here</a>!</p>
+		<p>You will be redirected in 5 seconds. If this doesn't happen, redirect manually by clicking <a href="https://zelnicek.ch">here</a>!</p>
 		<script>
-			setTimeout(window.location.replace='https://zelnicek.ch', 5000);
+			setTimeout(function(){ window.location.replace('https://zelnicek.ch') }, 5000);
 		</script>
 	</body>
 </html>
