--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<p>You will be redirected in 5 seconds. If this doesn't happen, redirect manually by clicking <a href="https://zelnicek.ch">here</a>!</p>
 		<script>
-			setTimeout(function(){ window.location.replace('https://zelnicek.ch') }, 5000);
+			setTimeout(function(){ window.location.assign('https://zelnicek.ch'); }, 5000);
 		</script>
 	</body>
 </html>
